<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="32dp"
    android:paddingHorizontal="16dp"
    android:background="@color/imc_background"
    tools:context=".imccalculator.ImcCalculatorActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/maleCard"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/card_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/femaleCard">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_male_24"
                app:tint="@color/white">
            </ImageView>
            <TextView
                android:text="@string/male"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/femaleCard"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maleCard">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_female_24"
                app:tint="@color/white">
            </ImageView>
            <TextView
                android:text="@string/female"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/heightCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintTop_toBottomOf="@+id/maleCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:text="@string/height"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/tvHeight"
                android:text="120 cm"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200">
            </com.google.android.material.slider.RangeSlider>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/weightCard"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintTop_toBottomOf="@id/heightCard"
        app:layout_constraintEnd_toStartOf="@id/ageCard"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/tvWeight"
                tools:text="60"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubstract"
                    android:backgroundTint="@color/btn_purple"
                    app:borderWidth="0dp"
                    app:tint="@color/white"
                    android:src="@drawable/ic_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp">
                </com.google.android.material.floatingactionbutton.FloatingActionButton>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAdd"
                    android:backgroundTint="@color/btn_purple"
                    app:borderWidth="0dp"
                    android:src="@drawable/ic_add"
                    app:tint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ageCard"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/card_background"
        app:layout_constraintTop_toBottomOf="@id/heightCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weightCard">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:text="@string/age"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/tvAge"
                tools:text="30"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnLess"
                    android:backgroundTint="@color/btn_purple"
                    app:borderWidth="0dp"
                    app:tint="@color/white"
                    android:src="@drawable/ic_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp">
                </com.google.android.material.floatingactionbutton.FloatingActionButton>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlus"
                    android:backgroundTint="@color/btn_purple"
                    app:borderWidth="0dp"
                    android:src="@drawable/ic_add"
                    app:tint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculate"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:background="@color/btn_purple"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ageCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>